--- a/source/Gemfile
+++ b/source/Gemfile
@@ -34,7 +34,7 @@ gem 'bootstrap-sass'
 gem 'launchy'
 
 group :test do
-  gem 'rspec-rails'
+  gem 'rspec-rails', '2.14.0'
   gem 'factory_girl_rails'
   gem 'capybara'
   gem 'database_cleaner'
