--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+/app_challenge/.idea/runConfigurations/Development__app_challenge.xml
+/app_challenge/.idea/runConfigurations/Production__app_challenge.xml
+/app_challenge/.idea/runConfigurations/spec__app_challenge.xml
+/app_challenge/.idea/runConfigurations/test__app_challenge.xml
 /app_challenge/.gitignore
 /app_challenge/.idea/.generators
 /app_challenge/.idea/.name
