Implemented Rails Programming Tasks
- Rails 4 skeleton
- Scaffolded Customer and Charge objects
- Sample Data
- Visual Representation of Different Charges
- RSpec

--- a/.gitignore
+++ b/.gitignore
@@ -4,13 +4,11 @@
 capybara-*.html
 .rspec
 /.bundle
-/vendor/bundle
-/log/*
-/tmp/*
-/db/*.sqlite3
-/public/system/*
-/coverage/
-/spec/tmp/*
+/source/log/*
+/source/tmp/*
+/source/db/*.sqlite3
+/source/public/system/*
+/source/coverage/
+/source/spec/tmp/*
 **.orig
-rerun.txt
-pickle-email-*.html
+.idea
