--- a/source/Gemfile
+++ b/source/Gemfile
@@ -21,6 +21,7 @@ group :development do
 end
 
 group :test do
+  gem 'factory_girl_rails'
   gem 'rspec-rails'
   gem 'capybara'
   gem 'database_cleaner'
