--- a/rails-test/Gemfile
+++ b/rails-test/Gemfile
@@ -36,6 +36,8 @@ group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug'
   gem 'rspec-rails'
+  gem 'factory_girl_rails'
+  gem 'parallel_tests'
 end
 
 group :development do
@@ -44,5 +46,16 @@ group :development do
 
   # Spring speeds up development by keeping your application running in the background. Read more: https://github.com/rails/spring
   gem 'spring'
+  gem 'guard-rspec', require: false
+  gem 'guard-cucumber', require: false
+  gem 'guard-livereload', '~> 2.4', require: false
+  gem 'guard-bundler', require: false
 end
 
+group :test do
+  gem 'shoulda-matchers'
+  gem 'cucumber-rails', require: false
+  gem 'database_cleaner'
+  gem 'selenium-webdriver'
+  gem 'simplecov', require: false
+end
