Added parallel tests and .env variables

--- a/rails-test/Gemfile
+++ b/rails-test/Gemfile
@@ -38,6 +38,7 @@ group :development, :test do
   gem 'rspec-rails'
   gem 'factory_girl_rails'
   gem 'parallel_tests'
+  gem 'dotenv-rails'
 end
 
 group :development do
