--- a/source/challenge/Gemfile
+++ b/source/challenge/Gemfile
@@ -32,9 +32,14 @@ gem 'sdoc', '~> 0.4.0', group: :doc
 # Use Capistrano for deployment
 # gem 'capistrano-rails', group: :development
 
+gem 'haml', '~> 4.0.7'
+
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug'
+  gem 'rspec-rails', '~> 3.5'
+  gem 'ffaker', '~> 2.2.0'
+  gem 'factory_girl_rails', '~> 4.7.0'
 end
 
 group :development do
@@ -45,3 +50,9 @@ group :development do
   gem 'spring'
 end
 
+group :test do
+  gem 'database_cleaner', '~> 1.5.3'
+  gem 'shoulda-matchers', '~> 3.1.1'
+  gem 'rspec-activemodel-mocks', '~> 1.0.3'
+  gem 'simplecov', '~> 0.12.0', require: false
+end
