--- a/source/challenge/Gemfile
+++ b/source/challenge/Gemfile
@@ -32,6 +32,7 @@ gem 'sdoc', '~> 0.4.0', group: :doc
 # Use Capistrano for deployment
 # gem 'capistrano-rails', group: :development
 
+gem 'money-rails', '~> 1.6.2'
 gem 'haml', '~> 4.0.7'
 
 group :development, :test do
