--- a/source/challenge/Gemfile
+++ b/source/challenge/Gemfile
@@ -56,4 +56,5 @@ group :test do
   gem 'shoulda-matchers', '~> 3.1.1'
   gem 'rspec-activemodel-mocks', '~> 1.0.3'
   gem 'simplecov', '~> 0.12.0', require: false
+  gem 'capybara', '~> 2.7.1'
 end
