--- a/code/Gemfile
+++ b/code/Gemfile
@@ -40,12 +40,14 @@ group :development, :test do
   gem 'byebug'
   gem 'spring'
   gem 'rspec-rails'
-  gem 'faker' 
+  gem 'faker'
+  gem 'factory_girl_rails'
 end
 
 group :test do
   gem 'database_cleaner'
   gem 'shoulda-matchers'
   gem 'capybara'
-  gem 'factory_girl_rails'
+  gem 'rspec-activemodel-mocks', '~> 1.0.3'
+  gem 'simplecov', '~> 0.12.0', require: false
 end
