--- a/source/credit_card_charge/Gemfile
+++ b/source/credit_card_charge/Gemfile
@@ -16,6 +16,7 @@ gem 'slim-rails' # Template
 
 group :development, :test do
   gem 'byebug', platform: :mri
+  gem 'rubocop', require: false
 end
 
 group :development do
