--- a/source/ShowMojoTest/Gemfile
+++ b/source/ShowMojoTest/Gemfile
@@ -25,6 +25,8 @@ gem 'sdoc', '~> 0.4.0', group: :doc
 
 # Use postgresql for database of Active Record
 gem 'pg'
+# Use money rails for better money processing and charge
+gem 'money-rails'
 
 # Use ActiveModel has_secure_password
 # gem 'bcrypt', '~> 3.1.7'
