--- a/source/ShowMojoTest/Gemfile
+++ b/source/ShowMojoTest/Gemfile
@@ -44,6 +44,7 @@ group :development, :test do
   gem 'database_cleaner'
   gem 'rspec-rails'
   gem 'factory_girl_rails'
+  gem 'faker'
 end
 
 group :development do
