--- a/source/Gemfile
+++ b/source/Gemfile
@@ -17,5 +17,8 @@ group :development, :test do
   gem 'byebug'
   gem 'web-console', '~> 2.0'
   gem 'spring'
+  gem 'rspec-rails', '~> 3.5'
+  gem 'factory_girl_rails'
+  gem 'guard-rspec', require: false
 end
 
