--- a/source/Gemfile
+++ b/source/Gemfile
@@ -13,12 +13,19 @@ gem 'sdoc', '~> 0.4.0', group: :doc
 
 gem 'haml-rails'
 
-group :development, :test do
-  gem 'byebug'
+group :development do
   gem 'web-console', '~> 2.0'
-  gem 'spring'
+  gem 'byebug'
+end
+
+group :test do
   gem 'rspec-rails', '~> 3.5'
   gem 'factory_girl_rails'
   gem 'guard-rspec', require: false
+  gem 'shoulda-matchers', '~> 3.1'
+end
+
+group :development, :test do
+  gem 'spring'
 end
 
