--- a/source/Gemfile
+++ b/source/Gemfile
@@ -24,5 +24,6 @@ group :development, :test do
   gem 'factory_girl_rails'
   gem 'guard-rspec', require: false
   gem 'shoulda-matchers', '~> 3.1'
+  gem 'capybara'
 end
 
