--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@ capybara-*.html
 **.orig
 rerun.txt
 pickle-email-*.html
+# Ignore master key for decrypting credentials and more.
+/config/master.key
