--- a/source/Gemfile
+++ b/source/Gemfile
@@ -38,6 +38,9 @@ group :development, :test do
 
   # RSpec-Rails
   gem 'rspec-rails', '~> 3.8'
+
+  # Capybara
+  gem 'capybara', '~> 3.13.2'
 end
 
 group :development do
