--- a/source/Gemfile
+++ b/source/Gemfile
@@ -4,7 +4,7 @@ gem 'jbuilder', '~> 2.0'
 gem 'rails', '4.2.11.1'
 gem 'sass-rails', '~> 5.0'
 gem 'sdoc', '~> 0.4.0', group: :doc
-gem 'sqlite3'
+gem 'sqlite3', '~> 1.3.6'
 gem 'uglifier', '>= 1.3.0'
 
 group :development, :test do
