--- a/source/credit_card_charge/Gemfile
+++ b/source/credit_card_charge/Gemfile
@@ -4,7 +4,7 @@ source 'https://rubygems.org'
 gem 'rails', '4.0.0'
 
 # Use sqlite3 as the database for Active Record
-gem 'sqlite3'
+gem 'pg', '0.18.4'
 
 # Use SCSS for stylesheets
 gem 'sass-rails', '~> 4.0.0'
@@ -31,6 +31,14 @@ gem 'haml-rails'
 
 group :development, :test do
   gem 'rspec-rails'
+  gem 'rspec-html-matchers', '~> 0.9.2'
+  gem 'factory_girl_rails'
+
+  gem 'pry'
+  gem 'pry-remote'
+  gem 'pry-nav'
+  gem 'pry-stack_explorer'
+
 end
 
 group :doc do
