--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,12 @@ capybara-*.html
 **.orig
 rerun.txt
 pickle-email-*.html
+# Ignore master key for decrypting credentials and more.
+/config/master.key
+
+/public/packs
+/public/packs-test
+/node_modules
+/yarn-error.log
+yarn-debug.log*
+.yarn-integrity
