--- a/source/Gemfile
+++ b/source/Gemfile
@@ -15,7 +15,7 @@ group :development, :test do
 end
 
 group :test do
-  gem 'factory_bot'
+  gem 'factory_bot_rails'
   gem 'capybara'
   gem 'shoulda-matchers'
 end
