--- a/source/Gemfile
+++ b/source/Gemfile
@@ -35,7 +35,7 @@ gem 'sdoc', '~> 0.4.0', group: :doc
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug'
-  gem 'rspec-rails'
+  gem 'rspec-rails', '~> 3.7'
   gem 'pry-byebug'
   gem 'shoulda-matchers'
   gem 'database_cleaner'
@@ -55,3 +55,4 @@ end
 gem "therubyracer"
 gem "less-rails"
 gem "twitter-bootstrap-rails"
+gem 'bootstrap-generators', '~> 3.3.4'
