--- a/src/Gemfile
+++ b/src/Gemfile
@@ -20,6 +20,10 @@ gem 'jbuilder', '~> 2.0'
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug'
+
+  gem "capybara", '3.30.0'
+  gem "database_cleaner", "1.8.3"
+  gem "rspec-rails", "~> 3.1"
 end
 
 group :development do
@@ -28,11 +32,4 @@ group :development do
 
   # Spring speeds up development by keeping your application running in the background. Read more: https://github.com/rails/spring
   gem 'spring'
-end
-
-group :test do
-  gem "capybara", "3.30.0"
-  gem "database_cleaner", "1.8.3"
-  gem "factory_bot_rails", "5.1.1"
-  gem "rspec-rails", "3.9.0"
 end
