--- a/source/Gemfile
+++ b/source/Gemfile
@@ -1,6 +1,7 @@
 source 'https://rubygems.org'
 group :development, :test do
   gem 'rspec-rails', '~> 3.9'
+  gem 'capybara'
 end
 
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
@@ -37,6 +38,7 @@ gem 'sdoc', '~> 0.4.0', group: :doc
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug'
+  gem 'pry-rails'
 end
 
 group :development do
