--- a/source/Gemfile
+++ b/source/Gemfile
@@ -34,6 +34,6 @@ gem 'sdoc', '~> 0.4.0', group: :doc
 
 group :development, :test do
   gem 'byebug'
-  gem 'rspec'
+  gem 'rspec-rails'
+  gem 'capybara'
 end
-gem 'rails_12factor'
