--- a/source/exampleApp/Gemfile
+++ b/source/exampleApp/Gemfile
@@ -33,6 +33,10 @@ group :doc do
   gem 'sdoc', require: false
 end
 
+group :development do
+  gem 'rspec', '3.10'
+end
+
 # Use ActiveModel has_secure_password
 # gem 'bcrypt-ruby', '~> 3.0.0'
 
