--- a/source/example-app/Gemfile
+++ b/source/example-app/Gemfile
@@ -22,7 +22,7 @@ gem 'coffee-rails', '~> 4.0.0'
 gem 'jquery-rails'
 
 # Turbolinks makes following links in your web application faster. Read more: https://github.com/rails/turbolinks
-gem 'turbolinks'
+gem 'turbolinks', '~> 1.3'
 
 # Build JSON APIs with ease. Read more: https://github.com/rails/jbuilder
 gem 'jbuilder', '~> 1.2'
@@ -34,6 +34,8 @@ end
 
 group :development, :test do
   gem 'rspec-rails', '~> 3.9.1'
+  gem 'database_cleaner', '1.8.3'
+  gem 'capybara'
 end
 
 # Use ActiveModel has_secure_password
