--- a/source/Gemfile
+++ b/source/Gemfile
@@ -1,5 +1,6 @@
 source 'https://rubygems.org'
 
+ruby '2.3.8'
 
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '4.2.11.3'
@@ -35,6 +36,7 @@ gem 'sdoc', '~> 0.4.0', group: :doc
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug'
+  gem 'rspec-rails', '~> 4.1.0'
 end
 
 group :development do
