--- a/source/card_charge/Gemfile
+++ b/source/card_charge/Gemfile
@@ -43,3 +43,14 @@ end
 
 # Use debugger
 # gem 'debugger', group: [:development, :test]
+
+
+group :test do
+  gem 'capybara'
+  gem 'database_cleaner'
+  gem 'rspec-rails'
+  gem 'selenium-webdriver'
+  gem 'webdrivers', '3.6.0'
+  gem 'factory_bot_rails'
+  gem 'puma'
+end
