--- a/slowmojo/Gemfile
+++ b/slowmojo/Gemfile
@@ -18,6 +18,7 @@ group :development, :test do
   gem "standardrb"
   gem "rspec-rails", "~> 5.0.0"
   gem "factory_bot_rails"
+  gem "capybara"
 end
 
 group :test do
